WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178774
UNPACK_FLIP_Y is broken for MSE-backed videos
https://bugs.webkit.org/show_bug.cgi?id=178774
Summary
UNPACK_FLIP_Y is broken for MSE-backed videos
Jer Noble
Reported
2017-10-25 00:07:39 PDT
UNPACK_FLIP_Y is broken for MSE-backed videos
Attachments
Patch
(362.16 KB, patch)
2017-10-25 00:10 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-elcapitan
(1.13 MB, application/zip)
2017-10-25 01:11 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews116 for mac-elcapitan
(2.14 MB, application/zip)
2017-10-25 01:36 PDT
,
Build Bot
no flags
Details
Patch
(366.65 KB, patch)
2017-10-25 08:34 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-10-25 00:10:19 PDT
<
rdar://problem/35040012
>
Jer Noble
Comment 2
2017-10-25 00:10:59 PDT
Created
attachment 324801
[details]
Patch
Build Bot
Comment 3
2017-10-25 01:11:27 PDT
Comment hidden (obsolete)
Comment on
attachment 324801
[details]
Patch
Attachment 324801
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/4981056
New failing tests: fast/canvas/webgl/texImage2D-mse-flipY-true.html fast/canvas/webgl/texImage2D-mse-flipY-false.html
Build Bot
Comment 4
2017-10-25 01:11:29 PDT
Comment hidden (obsolete)
Created
attachment 324802
[details]
Archive of layout-test-results from ews103 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5
2017-10-25 01:35:59 PDT
Comment hidden (obsolete)
Comment on
attachment 324801
[details]
Patch
Attachment 324801
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/4981057
New failing tests: fast/canvas/webgl/texImage2D-mse-flipY-true.html fast/canvas/webgl/texImage2D-mse-flipY-false.html
Build Bot
Comment 6
2017-10-25 01:36:01 PDT
Comment hidden (obsolete)
Created
attachment 324804
[details]
Archive of layout-test-results from ews116 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Jer Noble
Comment 7
2017-10-25 08:34:38 PDT
Created
attachment 324824
[details]
Patch
Dean Jackson
Comment 8
2017-10-25 12:05:17 PDT
Comment on
attachment 324824
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=324824&action=review
> Source/WebCore/platform/graphics/cv/VideoTextureCopierCV.cpp:401 > - " gl_Position.y = -gl_Position.y;\n" > + " normalizedPosition.y = 1.0 - normalizedPosition.y;\n"
Haha. My fault for not noticing this when reviewing.
WebKit Commit Bot
Comment 9
2017-10-25 12:42:21 PDT
Comment on
attachment 324824
[details]
Patch Clearing flags on attachment: 324824 Committed
r223974
: <
https://trac.webkit.org/changeset/223974
>
WebKit Commit Bot
Comment 10
2017-10-25 12:42:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug